# rust-actix-oauth2

./: .env sample  .gitignore  Cargo.toml  README.md
src/: main.rs
src/auth/: mod.rs  token_guard.rs
src/auth/oauth/: github_oauth.rs  google_oauth.rs  kakao_oauth.rs  mod.rs  naver_oauth.rs
src/config/: env.rs
src/handlers/: auth_handler.rs  mod.rs  oauth_handler.rs
src/models/: app_state.rs  mod.rs  query_code.rs  register_user_schema.rs  user.rs
src/responses/: filtered_user.rs  mod.rs  user_response.rs
